--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "deploy": "gh-pages -d dist -o suborigin"
   },
   "dependencies": {
+    "@headlessui/react": "^1.6.4",
     "@heroicons/react": "^1.0.5",
     "@hookform/error-message": "^2.0.0",
     "@hookform/resolvers": "^2.8.5",
@@ -21,22 +22,31 @@
     "antd": "^4.17.2",
     "axios": "^0.24.0",
     "classnames": "^2.3.1",
+    "ethers": "^5.6.8",
     "framer-motion": "^5.3.3",
     "gh-pages": "^3.1.0",
+    "google-map-react": "^2.1.10",
     "js-cookie": "^3.0.1",
     "moment": "^2.29.1",
     "react": "^17.0.0",
+    "react-countdown": "^2.3.2",
     "react-custom-scrollbars": "^4.2.1",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^17.0.0",
+    "react-dropzone": "^14.2.1",
     "react-facebook-login": "^4.1.1",
     "react-google-login": "^5.2.2",
     "react-google-recaptcha-v3": "^1.9.7",
     "react-hook-form": "^7.23.0",
     "react-paginate": "^7.1.2",
+    "react-qr-code": "^2.0.7",
+    "react-qr-reader": "^3.0.0-beta-1",
     "react-query": "^3.34.8",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.0.2",
     "react-spinners": "^0.11.0",
+    "react-tag-input": "^6.8.0",
     "react-toastify": "^8.1.0",
     "redux": "^4.1.2",
     "redux-persist": "^6.0.0",
@@ -44,6 +54,9 @@
     "socket.io-client": "^4.4.1",
     "styled-components": "^5.2.3",
     "typescript": "^4.5.2",
+    "web3": "^1.7.3",
+    "web3-eth-contract": "^1.7.3",
+    "web3-react": "^5.0.5",
     "yup": "^0.32.11"
   },
   "devDependencies": {
